@@ -4,6 +4,7 @@ version 0.04:
 
 	Improvements:
 	- add some programming instructions.
+	- add is_pivate_ipv4() and is_private_ipv6().
 
 version 0.03: Sat 28 Sep 13:19:43 CEST 2024
 
